test/errors/assign2.ls

#OUTPUT
#Syntax Error: Invalid token in expression.
# -> [13] x : int = =
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> int
    x : int = =
begin
    return 0;
end

